[package]
name = "rust-redpanda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.1"
env_logger = "0.10.0"
log = "0.4.20"
rdkafka = { version = "0.29.0", features = ["sasl", "ssl", "libz"], default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
